objects/SACObject1__c.object
<CustomObject>
    <fields>
        <fullName>SACField1__c</fullName>
        <label>SACField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SACField2__c</fullName>
        <label>SACField2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SACField3__c</fullName>
        <label>SACField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAField4__c</fullName>
        <label>SAField4</label>
        <type>Email</type>
    </fields>
    <label>SACObject1</label>
    <nameField>
        <label>SAObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SACObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SACFieldVal1</fullName>
        <active>true</active>
        <description>ii</description>
        <errorConditionFormula>ISBLANK( SACField3__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>